add mongoDB and update readme

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 LASTFM_API_KEY="422efd84f96c84fa583a041c6d516e77"
+MONGODB_URI="mongodb+srv://xiaoyouwen00:xiaokbxz245685@vibesonatinacluster.ynrg4zg.mongodb.net/?retryWrites=true&w=majority&appName=VibeSonatinaCluster"
